#1: Add stylus into the mix

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2"
   }
 }
