--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "apexcharts": "^3.15.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-apexcharts": "^1.5.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
